feat(doctor): 实现医生工作站模块
- 新增DoctorService和DoctorServiceImpl，提供候诊列表查询和挂号状态更新功能
- 新增DoctorController REST接口
  - GET /api/doctor/waiting-list: 查询科室候诊患者列表
  - PUT /api/doctor/registrations/{id}/status: 更新挂号就诊状态
- 新增DoctorControllerTest集成测试用例，覆盖以下场景
  - 有效科室的候诊列表查询
  - 无效科室的参数验证
  - 就诊状态更新（待就诊->已就诊）
  - 不存在的挂号记录的异常处理
- 修复RegistrationControllerTest中testRegister_ExistingPatient测试用例
  - 问题：第二次挂号使用相同医生ID触发重复挂号检查，导致500错误
  - 修复：第二次挂号使用不同医生，验证老患者可挂不同医生的场景
- 更新测试配置指向PostgreSQL测试数据库
  - application-test.yml和application-test.properties配置Postgres连接
  - 使用create-drop DDL策略自动创建和清理测试表
- 更新build.gradle添加必要依赖

测试覆盖：30个集成测试全部通过

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -14,8 +14,7 @@ server:
     include-exception: false
 
 spring:
-  # 数据源配置 - 测试环境
-  # 使用独立的测试数据库，避免影响开发数据
+  # 数据源配置 - 测试环境（连接真实测试库）
   datasource:
     url: jdbc:postgresql://localhost:5432/his_project_test
     username: postgres
@@ -34,7 +33,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
