--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,14 +1,14 @@
 # Test Profile Configuration
 
-# PostgreSQL Test Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/his_project
+# PostgreSQL Test Database (real DB)
+spring.datasource.url=jdbc:postgresql://localhost:5432/his_project_test
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
