--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -17,9 +17,11 @@ spring:
   # 数据源配置 - 测试环境（连接真实测试库）
   # 【安全提示】建议使用环境变量配置数据库密码
   datasource:
-    url: jdbc:postgresql://localhost:5432/his_project_test
+    url: jdbc:postgresql://172.20.192.1:5432:5432/his_project_test
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:123456}
+
+
     driver-class-name: org.postgresql.Driver
     # HikariCP 连接池配置
     hikari:
