--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,13 +1,13 @@
 # Test Profile Configuration
 
-# PostgreSQL Test Database (real DB)
-spring.datasource.url=jdbc:postgresql://localhost:5432/his_project_test
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
+# H2 In-Memory Database (for testing without external DB)
+spring.datasource.url=jdbc:h2:mem:his_project_test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
